--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,13 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
+    "@mui/system": "^6.4.0",
+    "@types/material-ui": "^0.21.18",
     "axios": "^1.7.9",
     "cra-template-typescript": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^6.28.1",
     "react-scripts": "5.0.1"
   },
   "scripts": {
